# snarkify_sirius

./: Cargo.toml
examples/trivial/: main.rs
