[package]
name = "sirius"
version = "0.1.1"
authors = [
    "chaosma chao@snarkify.io",
    "cyphersnake mikhail@snarkify.io",
]
repository = "https://github.com/snarkify/sirius"
description = "A Plonkish folding framework for Incrementally Verifiable Computation (IVC)."
keywords = [
    "cryptography",
    "ivc",
    "nova",
    "proof-system",
    "protogalaxy",
    "zero-knowledge-proofs",
    "zkp",
]
edition = "2021"
license = "MIT"

[dependencies]

[dev-dependencies]
bincode = "1.3"
clap = { version = "4.5.4", features = ["derive"] }
criterion = "0.5.1"
dhat = "0.3.3"
git2 = "0.19.0"
maplit = "1.0.2"
prettytable-rs = "0.10.0"
tempfile = "3.9.0"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing-test = "0.2.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["prepush-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]

[[bench]]
name = "trivial"
harness = false

[[bench]]
name = "poseidon"
harness = false

[features]
# Allows cli-example to check memory usage with dhat
dhat-heap = []
